# k_game

./: .gitignore  CMakeLists.txt  LICENSE
example/ynx_llk_fight/: CMakeLists.txt  README.md  main.c
example/ynx_llk_fight/component/movement/: yx_movement.c  yx_movement.h
example/ynx_llk_fight/config/: yx_config_arena_blackboard.h  yx_config_collision_group.h  yx_config_z_index.h
example/ynx_llk_fight/demo_1/aseprite/: alert_marker.aseprite  banner_you_died.aseprite  bubble.aseprite  iris.aseprite  llk.aseprite  particle_on_create_fighter.aseprite  particle_on_hit.aseprite  shadow.aseprite  title.aseprite  weapon_apple.aseprite  ynx.aseprite
example/ynx_llk_fight/demo_1/sprite/: alert_marker.json  banner_you_died.json  bubble.json  iris.json  liliko.json  particle_on_create_fighter.json  particle_on_hit.json  shadow.json  weapon_apple.json  ynx.json
example/ynx_llk_fight/demo_1/ui/: ui.xml  ui_2.xml  ui_room_1.xml  ui_title.xml  ui_title_copy.xml
example/ynx_llk_fight/game/: yx_game_init.c  yx_game_init.h
example/ynx_llk_fight/image/: yx_image.c  yx_image.h
example/ynx_llk_fight/include/: yx_asset.h
example/ynx_llk_fight/object/: yx_obj_rival.c
example/ynx_llk_fight/object/alert_marker/: yx_obj_alert_marker.c  yx_obj_alert_marker.h
example/ynx_llk_fight/object/bubble/: yx_obj_bubble.c  yx_obj_bubble.h  yx_obj_bubble_maker.c  yx_obj_bubble_maker.h
example/ynx_llk_fight/object/fighter/: yx_obj_fighter.h  yx_obj_fighter_create.c
example/ynx_llk_fight/object/fighter/manager/: yx_arena_manager.c  yx_arena_manager.h
example/ynx_llk_fight/object/num_particle/: yx_obj_num_particle.c  yx_obj_num_particle.h
example/ynx_llk_fight/object/particle/: yx_fx_fighter_appear.c  yx_fx_fighter_appear.h  yx_obj_alert_marker.c  yx_obj_alert_marker.h  yx_obj_particle_on_hit.c  yx_obj_particle_on_hit.h  yx_obj_shadow.c  yx_obj_shadow.h  yx_obj_text_particle.c  yx_obj_text_particle.h  yx_ui_banner.c  yx_ui_banner.h
example/ynx_llk_fight/object/particle_on_hit/: yx_obj_particle_on_hit.c  yx_obj_particle_on_hit.h
example/ynx_llk_fight/object/player/: yx_obj_player.c  yx_obj_player.h  yx_obj_player_collision.c  yx_obj_player_create.c  yx_obj_player_debug.c  yx_obj_player_draw.c  yx_obj_player_move.c
example/ynx_llk_fight/object/rival/: yx_obj_rival.c  yx_obj_rival.h  yx_obj_rival_collision.c  yx_obj_rival_create.c  yx_obj_rival_draw.c  yx_obj_rival_move.c
example/ynx_llk_fight/object/shadow/: yx_obj_shadow.c
example/ynx_llk_fight/object/text_particle/: yx_obj_text_particle.c  yx_obj_text_particle.h
example/ynx_llk_fight/object/weapon/: yx_obj_weapon.c  yx_obj_weapon_apple.c  yx_obj_weapon_apple.h  yx_obj_weapon_i.c  yx_obj_weapon_i.h
example/ynx_llk_fight/room/: yx_room_arena.c  yx_room_arena.h  yx_room_empty.c  yx_room_title.c
example/ynx_llk_fight/room/room_1/: yx_room_1.h  yx_room_1_create.c  yx_room_1_draw_bkgd.c  yx_room_1_place_obj.c  yx_room_1_ui.c  yx_room_1_webui.c
example/ynx_llk_fight/room/room_arena/: yx_room_arena.c
example/ynx_llk_fight/room/room_empty/: yx_room_empty.c
example/ynx_llk_fight/room/room_title/: yx_room_title.c  yx_room_title.h
example/ynx_llk_fight/sound/: yx_sound.c  yx_sound.h
example/ynx_llk_fight/sprite/: yx_spr.c  yx_spr.h
example/ynx_llk_fight/src/: main.c
example/ynx_llk_fight/src/game/: yx_game_init.c  yx_game_init.h
example/ynx_llk_fight/src/room/: yx_room_1.c  yx_room_1.h
example/ynx_llk_fight/utils/: yx_float_vec.h  yx_math.h
example/ynx_llk_fight/utils/sprite_sheet/: yx_sprite_sheet.c
example/ynx_llk_fight/utils/state_machine/: yx_state_machine.c  yx_state_machine.h
k_game/: .gitignore  CMakeLists.txt
k_game/docs/: README.md  _navbar.md  _sidebar.md  index.html
k_game/docs/drawio/: k_game.drawio
k_game/docs/k_array/: README.md
k_game/docs/k_game/: k_callback.md
k_game/docs/k_game/design_docs/: callback.md
k_game/docs/k_game/quick_start/: add_object.md  basic_concepts.md  create_room.md  create_sprite.md  draw_image.md  draw_sprite.md  event_callback.md  game_start.md  getting_started.md  keyboard_input.md  object_add_callback.md  object_add_component.md  play_sound.md  register_component.md  register_component_manager.md  room_add_callback.md  room_add_component_manager.md  setup_dev_env.md  start_game.md  switch_room.md  view.md  基础概念.md
k_game/docs/k_game/文档/: 事件回调.md  入口函数.md  基础概念.md  房间.md  游戏对象.md  碰撞盒.md  组件.md
k_game/docs/k_mem_pool/: README.md
k_game/include/k_array/: k_array.h  k_array_tmpl.h  k_dyn_array.h
k_game/include/k_container_of/: k_container_of.h
k_game/include/k_game/: k_game.h
k_game/include/k_list/: k_hash_list.h  k_list.h
k_game/include/k_log/: k_log.h
k_game/include/k_map/: k_int_intrusive_map.h  k_intrusive_map.h  k_str_intrusive_map.h  k_str_map.h
k_game/include/k_printf/: k_printf_binding.h
k_game/include/k_utils/: k_str_buf.h
k_game/include/k_webui/: k_webui.h
k_game/include/k_xml/: k_xml.h
k_game/include/llk_ui/: llk_ui_ext.h
k_game/src/k_array/: k_array.c
k_game/src/k_json/: _internal.h  k_json.c  k_json_arr.c  k_json_obj.c  k_json_parser.c  k_json_print.c  k_json_print.h  k_json_val.c
k_game/src/k_log/: k_log.c
k_game/src/k_map/: k_int_intrusive_map.c  k_str_intrusive_map.c  k_str_map.c
k_game/src/k_mem_pool/: k_mem_pool.c
k_game/src/k_printf/: k_printf.c
k_game/src/k_printf_binding/: k_printf_binding.c  k_printf_xml.c
k_game/src/k_utils/: k_seq_step.c
k_game/src/k_webui/: k_webui_bind.c  k_webui_init.c  k_webui_k_printf.c  k_webui_log.c  k_webui_mem_alloc.c
k_game/src/k_xml/: k_xml.c
k_game/src/llk_ui/: llk_ui_context.c  llk_ui_mem_alloc.c  llk_ui_val_parser.c  llk_ui_xml_build.c
k_game/src/llk_ui/llk_ui_elme_builtin/: llk_ui_elem_box.c  llk_ui_elem_image.c  llk_ui_elem_root.c  llk_ui_elem_slider.c
k_game/test/demo_1/: tmp.c
k_game/test/demo_1/llk_ui/: llk_ui.h  llk_ui_ext.h  llk_ui_mem_alloc.c
k_game/test/demo_1/object/: yx_obj.h  yx_obj_bubble.c  yx_obj_bubble.h  yx_obj_rival.h
k_game/test/demo_1/room/: yx_room_arena.c  yx_room_arena.h
k_game/test/demo_1/sprite/: yx_spr.h  yx_spr_liliko.c
(+1087 files in other folders)
